Fix: Accordion collapsable fix, modal error message fix

--- a/src/scss/sections/_signup.scss
+++ b/src/scss/sections/_signup.scss
@@ -77,7 +77,7 @@ input[type="text"],
 input[type="password"],
 input[type="date"],
 input[type="alphanumeric"] {
-    padding: $fiftenPxx $twentyPx;
+    padding: $fiftenPxx 40px;
     margin-top: $eightPixel;
     margin-bottom: $fiftenPxx;
     border: 1px solid #ccc;
