--- a/src/scss/sections/_task-create-modal.scss
+++ b/src/scss/sections/_task-create-modal.scss
@@ -29,7 +29,6 @@ input[type="date"] {
 
 .tasknameerror {
     color: red;
-    margin-right: 2em;
 }
 
 .modal-calandar {
